# time-manager

./: LICENSE  README.md  pyproject.toml
src/tmngr/: __main__.py  cli.py  model.py  slots.py  storage.py
src/tmngr/commands/: done.py  init.py  now.py  print.py
